# up-tui

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
crates/up-api/: CHANGELOG.md  Cargo.toml
crates/up-api/src/: client.rs  error.rs  models.rs
src/: config.rs  main.rs
src/api/: client.rs  models.rs
src/app/: event.rs  handler.rs  mod.rs  state.rs
src/client/: mod.rs  models.rs
src/ui/: mod.rs  status_bar.rs  tabs.rs  transaction_detail.rs  transaction_list.rs
