[workspace]
members = ["crates/up-api"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
up-api = { path = "crates/up-api" }
anyhow = "1"
jiff = { version = "0.2", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
futures = "0.3.32"
ratatui = "0.30"
ratatui-themes = { version = "0.2", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.0"

[package]
name = "up-tui"
version.workspace = true
edition.workspace = true

[dependencies]
up-api.workspace = true
anyhow.workspace = true
jiff.workspace = true
crossterm.workspace = true
dirs.workspace = true
futures.workspace = true
ratatui.workspace = true
ratatui-themes.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
