[package]
name = "up-tui"
description = "A terminal UI for viewing Up Banking accounts and transactions"
keywords = ["tui", "banking", "up-bank", "ratatui", "terminal"]
version = "0.2.2"
edition = "2024"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/abusch/up-tui"

[[bin]]
name = "up"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
jiff = { version = "0.2.23", features = ["serde"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
http-cache-reqwest = { version = "1.0.0-alpha.5", default-features = false, features = [
  "manager-moka",
  "url-standard",
] }
ratatui = "0.30.0"
ratatui-themes = { version = "0.2.0", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-middleware = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", default-features = false, features = [
  "net",
  "rt",
  "macros",
] }
toml = "1.1.2"
