[package]
name = "up-api"
description = "Client for the Up Banking API"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
http-cache-reqwest.workspace = true
jiff.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
